y.output
Grammaire

    0 $accept: start $end

    1 start: tMAIN tPAROPEN mainArg tPARCLOSED tBRACKETOPEN instructions tBRACKETCLOSED

    2 mainArg: %empty
    3        | tINT

    4 instructions: instruction instructions
    5             | %empty

    6 instruction: tID tAFFECT exp tENDEXPR
    7            | tPRINTF tPAROPEN tID tPARCLOSED tENDEXPR
    8            | if
    9            | while

   10 $@1: %empty

   11 instruction: tINT $@1 declBody

   12 $@2: %empty

   13 instruction: tCONST tINT $@2 declBody

   14 declBody: tID tAFFECT tINTVAR tENDEXPR
   15         | tID tENDEXPR
   16         | tID tCOMMA declBody
   17         | tID tAFFECT tINTVAR tCOMMA declBody

   18 $@3: %empty

   19 if: tIF cond tBRACKETOPEN $@3 instructions tBRACKETCLOSED

   20 $@4: %empty

   21 while: tWHILE cond tBRACKETOPEN $@4 instructions tBRACKETCLOSED

   22 cond: tPAROPEN cond tPARCLOSED
   23     | tID
   24     | tINTVAR
   25     | cond tAND cond
   26     | tNOT cond
   27     | cond tINF cond

   28 exp: tPAROPEN exp tPARCLOSED
   29    | exp tPLUS exp
   30    | exp tMINUS exp
   31    | exp tSTAR exp
   32    | exp tSLASH exp
   33    | tINTVAR
   34    | tID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 1
tINT (259) 3 11 13
tCONST (260) 13
tPRINTF (261) 7
tBRACKETOPEN (262) 1 19 21
tBRACKETCLOSED (263) 1 19 21
tPAROPEN (264) 1 7 22 28
tPARCLOSED (265) 1 7 22 28
tAFFECT (266) 6 14 17
tPLUS (267) 29
tMINUS (268) 30
tSTAR (269) 31
tSLASH (270) 32
tCOMMA (271) 16 17
tENDEXPR (272) 6 7 14 15
tINTVAR (273) 14 17 24 33
tID (274) 6 7 14 15 16 17 23 34
tIF (275) 19
tNOT (276) 26
tAND (277) 25
tINF (278) 27
tWHILE (279) 21


Non-terminaux, suivis des règles où ils apparaissent

$accept (25)
    à gauche: 0
start (26)
    à gauche: 1, à droite: 0
mainArg (27)
    à gauche: 2 3, à droite: 1
instructions (28)
    à gauche: 4 5, à droite: 1 4 19 21
instruction (29)
    à gauche: 6 7 8 9 11 13, à droite: 4
$@1 (30)
    à gauche: 10, à droite: 11
$@2 (31)
    à gauche: 12, à droite: 13
declBody (32)
    à gauche: 14 15 16 17, à droite: 11 13 16 17
if (33)
    à gauche: 19, à droite: 8
$@3 (34)
    à gauche: 18, à droite: 19
while (35)
    à gauche: 21, à droite: 9
$@4 (36)
    à gauche: 20, à droite: 21
cond (37)
    à gauche: 22 23 24 25 26 27, à droite: 19 21 22 25 26 27
exp (38)
    à gauche: 28 29 30 31 32 33 34, à droite: 6 28 29 30 31 32


État 0

    0 $accept: . start $end

    tMAIN  décalage et aller à l'état 1

    start  aller à l'état 2


État 1

    1 start: tMAIN . tPAROPEN mainArg tPARCLOSED tBRACKETOPEN instructions tBRACKETCLOSED

    tPAROPEN  décalage et aller à l'état 3


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


État 3

    1 start: tMAIN tPAROPEN . mainArg tPARCLOSED tBRACKETOPEN instructions tBRACKETCLOSED

    tINT  décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 2 (mainArg)

    mainArg  aller à l'état 6


État 4

    0 $accept: start $end .

    $défaut  accepter


État 5

    3 mainArg: tINT .

    $défaut  réduction par utilisation de la règle 3 (mainArg)


État 6

    1 start: tMAIN tPAROPEN mainArg . tPARCLOSED tBRACKETOPEN instructions tBRACKETCLOSED

    tPARCLOSED  décalage et aller à l'état 7


État 7

    1 start: tMAIN tPAROPEN mainArg tPARCLOSED . tBRACKETOPEN instructions tBRACKETCLOSED

    tBRACKETOPEN  décalage et aller à l'état 8


État 8

    1 start: tMAIN tPAROPEN mainArg tPARCLOSED tBRACKETOPEN . instructions tBRACKETCLOSED

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tPRINTF  décalage et aller à l'état 11
    tID      décalage et aller à l'état 12
    tIF      décalage et aller à l'état 13
    tWHILE   décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (instructions)

    instructions  aller à l'état 15
    instruction   aller à l'état 16
    if            aller à l'état 17
    while         aller à l'état 18


État 9

   11 instruction: tINT . $@1 declBody

    $défaut  réduction par utilisation de la règle 10 ($@1)

    $@1  aller à l'état 19


État 10

   13 instruction: tCONST . tINT $@2 declBody

    tINT  décalage et aller à l'état 20


État 11

    7 instruction: tPRINTF . tPAROPEN tID tPARCLOSED tENDEXPR

    tPAROPEN  décalage et aller à l'état 21


État 12

    6 instruction: tID . tAFFECT exp tENDEXPR

    tAFFECT  décalage et aller à l'état 22


État 13

   19 if: tIF . cond tBRACKETOPEN $@3 instructions tBRACKETCLOSED

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 27


État 14

   21 while: tWHILE . cond tBRACKETOPEN $@4 instructions tBRACKETCLOSED

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 28


État 15

    1 start: tMAIN tPAROPEN mainArg tPARCLOSED tBRACKETOPEN instructions . tBRACKETCLOSED

    tBRACKETCLOSED  décalage et aller à l'état 29


État 16

    4 instructions: instruction . instructions

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tPRINTF  décalage et aller à l'état 11
    tID      décalage et aller à l'état 12
    tIF      décalage et aller à l'état 13
    tWHILE   décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (instructions)

    instructions  aller à l'état 30
    instruction   aller à l'état 16
    if            aller à l'état 17
    while         aller à l'état 18


État 17

    8 instruction: if .

    $défaut  réduction par utilisation de la règle 8 (instruction)


État 18

    9 instruction: while .

    $défaut  réduction par utilisation de la règle 9 (instruction)


État 19

   11 instruction: tINT $@1 . declBody

    tID  décalage et aller à l'état 31

    declBody  aller à l'état 32


État 20

   13 instruction: tCONST tINT . $@2 declBody

    $défaut  réduction par utilisation de la règle 12 ($@2)

    $@2  aller à l'état 33


État 21

    7 instruction: tPRINTF tPAROPEN . tID tPARCLOSED tENDEXPR

    tID  décalage et aller à l'état 34


État 22

    6 instruction: tID tAFFECT . exp tENDEXPR

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 38


État 23

   22 cond: tPAROPEN . cond tPARCLOSED

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 39


État 24

   24 cond: tINTVAR .

    $défaut  réduction par utilisation de la règle 24 (cond)


État 25

   23 cond: tID .

    $défaut  réduction par utilisation de la règle 23 (cond)


État 26

   26 cond: tNOT . cond

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 40


État 27

   19 if: tIF cond . tBRACKETOPEN $@3 instructions tBRACKETCLOSED
   25 cond: cond . tAND cond
   27     | cond . tINF cond

    tBRACKETOPEN  décalage et aller à l'état 41
    tAND          décalage et aller à l'état 42
    tINF          décalage et aller à l'état 43


État 28

   21 while: tWHILE cond . tBRACKETOPEN $@4 instructions tBRACKETCLOSED
   25 cond: cond . tAND cond
   27     | cond . tINF cond

    tBRACKETOPEN  décalage et aller à l'état 44
    tAND          décalage et aller à l'état 42
    tINF          décalage et aller à l'état 43


État 29

    1 start: tMAIN tPAROPEN mainArg tPARCLOSED tBRACKETOPEN instructions tBRACKETCLOSED .

    $défaut  réduction par utilisation de la règle 1 (start)


État 30

    4 instructions: instruction instructions .

    $défaut  réduction par utilisation de la règle 4 (instructions)


État 31

   14 declBody: tID . tAFFECT tINTVAR tENDEXPR
   15         | tID . tENDEXPR
   16         | tID . tCOMMA declBody
   17         | tID . tAFFECT tINTVAR tCOMMA declBody

    tAFFECT   décalage et aller à l'état 45
    tCOMMA    décalage et aller à l'état 46
    tENDEXPR  décalage et aller à l'état 47


État 32

   11 instruction: tINT $@1 declBody .

    $défaut  réduction par utilisation de la règle 11 (instruction)


État 33

   13 instruction: tCONST tINT $@2 . declBody

    tID  décalage et aller à l'état 31

    declBody  aller à l'état 48


État 34

    7 instruction: tPRINTF tPAROPEN tID . tPARCLOSED tENDEXPR

    tPARCLOSED  décalage et aller à l'état 49


État 35

   28 exp: tPAROPEN . exp tPARCLOSED

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 50


État 36

   33 exp: tINTVAR .

    $défaut  réduction par utilisation de la règle 33 (exp)


État 37

   34 exp: tID .

    $défaut  réduction par utilisation de la règle 34 (exp)


État 38

    6 instruction: tID tAFFECT exp . tENDEXPR
   29 exp: exp . tPLUS exp
   30    | exp . tMINUS exp
   31    | exp . tSTAR exp
   32    | exp . tSLASH exp

    tPLUS     décalage et aller à l'état 51
    tMINUS    décalage et aller à l'état 52
    tSTAR     décalage et aller à l'état 53
    tSLASH    décalage et aller à l'état 54
    tENDEXPR  décalage et aller à l'état 55


État 39

   22 cond: tPAROPEN cond . tPARCLOSED
   25     | cond . tAND cond
   27     | cond . tINF cond

    tPARCLOSED  décalage et aller à l'état 56
    tAND        décalage et aller à l'état 42
    tINF        décalage et aller à l'état 43


État 40

   25 cond: cond . tAND cond
   26     | tNOT cond .
   27     | cond . tINF cond

    $défaut  réduction par utilisation de la règle 26 (cond)


État 41

   19 if: tIF cond tBRACKETOPEN . $@3 instructions tBRACKETCLOSED

    $défaut  réduction par utilisation de la règle 18 ($@3)

    $@3  aller à l'état 57


État 42

   25 cond: cond tAND . cond

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 58


État 43

   27 cond: cond tINF . cond

    tPAROPEN  décalage et aller à l'état 23
    tINTVAR   décalage et aller à l'état 24
    tID       décalage et aller à l'état 25
    tNOT      décalage et aller à l'état 26

    cond  aller à l'état 59


État 44

   21 while: tWHILE cond tBRACKETOPEN . $@4 instructions tBRACKETCLOSED

    $défaut  réduction par utilisation de la règle 20 ($@4)

    $@4  aller à l'état 60


État 45

   14 declBody: tID tAFFECT . tINTVAR tENDEXPR
   17         | tID tAFFECT . tINTVAR tCOMMA declBody

    tINTVAR  décalage et aller à l'état 61


État 46

   16 declBody: tID tCOMMA . declBody

    tID  décalage et aller à l'état 31

    declBody  aller à l'état 62


État 47

   15 declBody: tID tENDEXPR .

    $défaut  réduction par utilisation de la règle 15 (declBody)


État 48

   13 instruction: tCONST tINT $@2 declBody .

    $défaut  réduction par utilisation de la règle 13 (instruction)


État 49

    7 instruction: tPRINTF tPAROPEN tID tPARCLOSED . tENDEXPR

    tENDEXPR  décalage et aller à l'état 63


État 50

   28 exp: tPAROPEN exp . tPARCLOSED
   29    | exp . tPLUS exp
   30    | exp . tMINUS exp
   31    | exp . tSTAR exp
   32    | exp . tSLASH exp

    tPARCLOSED  décalage et aller à l'état 64
    tPLUS       décalage et aller à l'état 51
    tMINUS      décalage et aller à l'état 52
    tSTAR       décalage et aller à l'état 53
    tSLASH      décalage et aller à l'état 54


État 51

   29 exp: exp tPLUS . exp

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 65


État 52

   30 exp: exp tMINUS . exp

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 66


État 53

   31 exp: exp tSTAR . exp

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 67


État 54

   32 exp: exp tSLASH . exp

    tPAROPEN  décalage et aller à l'état 35
    tINTVAR   décalage et aller à l'état 36
    tID       décalage et aller à l'état 37

    exp  aller à l'état 68


État 55

    6 instruction: tID tAFFECT exp tENDEXPR .

    $défaut  réduction par utilisation de la règle 6 (instruction)


État 56

   22 cond: tPAROPEN cond tPARCLOSED .

    $défaut  réduction par utilisation de la règle 22 (cond)


État 57

   19 if: tIF cond tBRACKETOPEN $@3 . instructions tBRACKETCLOSED

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tPRINTF  décalage et aller à l'état 11
    tID      décalage et aller à l'état 12
    tIF      décalage et aller à l'état 13
    tWHILE   décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (instructions)

    instructions  aller à l'état 69
    instruction   aller à l'état 16
    if            aller à l'état 17
    while         aller à l'état 18


État 58

   25 cond: cond . tAND cond
   25     | cond tAND cond .
   27     | cond . tINF cond

    $défaut  réduction par utilisation de la règle 25 (cond)


État 59

   25 cond: cond . tAND cond
   27     | cond . tINF cond
   27     | cond tINF cond .

    tAND  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 27 (cond)


État 60

   21 while: tWHILE cond tBRACKETOPEN $@4 . instructions tBRACKETCLOSED

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tPRINTF  décalage et aller à l'état 11
    tID      décalage et aller à l'état 12
    tIF      décalage et aller à l'état 13
    tWHILE   décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (instructions)

    instructions  aller à l'état 70
    instruction   aller à l'état 16
    if            aller à l'état 17
    while         aller à l'état 18


État 61

   14 declBody: tID tAFFECT tINTVAR . tENDEXPR
   17         | tID tAFFECT tINTVAR . tCOMMA declBody

    tCOMMA    décalage et aller à l'état 71
    tENDEXPR  décalage et aller à l'état 72


État 62

   16 declBody: tID tCOMMA declBody .

    $défaut  réduction par utilisation de la règle 16 (declBody)


État 63

    7 instruction: tPRINTF tPAROPEN tID tPARCLOSED tENDEXPR .

    $défaut  réduction par utilisation de la règle 7 (instruction)


État 64

   28 exp: tPAROPEN exp tPARCLOSED .

    $défaut  réduction par utilisation de la règle 28 (exp)


État 65

   29 exp: exp . tPLUS exp
   29    | exp tPLUS exp .
   30    | exp . tMINUS exp
   31    | exp . tSTAR exp
   32    | exp . tSLASH exp

    tSTAR   décalage et aller à l'état 53
    tSLASH  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 29 (exp)


État 66

   29 exp: exp . tPLUS exp
   30    | exp . tMINUS exp
   30    | exp tMINUS exp .
   31    | exp . tSTAR exp
   32    | exp . tSLASH exp

    tSTAR   décalage et aller à l'état 53
    tSLASH  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 30 (exp)


État 67

   29 exp: exp . tPLUS exp
   30    | exp . tMINUS exp
   31    | exp . tSTAR exp
   31    | exp tSTAR exp .
   32    | exp . tSLASH exp

    $défaut  réduction par utilisation de la règle 31 (exp)


État 68

   29 exp: exp . tPLUS exp
   30    | exp . tMINUS exp
   31    | exp . tSTAR exp
   32    | exp . tSLASH exp
   32    | exp tSLASH exp .

    $défaut  réduction par utilisation de la règle 32 (exp)


État 69

   19 if: tIF cond tBRACKETOPEN $@3 instructions . tBRACKETCLOSED

    tBRACKETCLOSED  décalage et aller à l'état 73


État 70

   21 while: tWHILE cond tBRACKETOPEN $@4 instructions . tBRACKETCLOSED

    tBRACKETCLOSED  décalage et aller à l'état 74


État 71

   17 declBody: tID tAFFECT tINTVAR tCOMMA . declBody

    tID  décalage et aller à l'état 31

    declBody  aller à l'état 75


État 72

   14 declBody: tID tAFFECT tINTVAR tENDEXPR .

    $défaut  réduction par utilisation de la règle 14 (declBody)


État 73

   19 if: tIF cond tBRACKETOPEN $@3 instructions tBRACKETCLOSED .

    $défaut  réduction par utilisation de la règle 19 (if)


État 74

   21 while: tWHILE cond tBRACKETOPEN $@4 instructions tBRACKETCLOSED .

    $défaut  réduction par utilisation de la règle 21 (while)


État 75

   17 declBody: tID tAFFECT tINTVAR tCOMMA declBody .

    $défaut  réduction par utilisation de la règle 17 (declBody)
